add TUI for todo done

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ edition = "2018"
 clap = "2.33.0"
 yaml-rust = "0.4"
 linked-hash-map = "0.5.1"
+chrono = "0.4.9"
+tui = "0.6.2"
+termion = "1.5.3"
